--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "eslint": "^8.54.0",
     "eslint-config-prettier": "^9.0.0",
     "express": "^4.18.2",
+    "joi": "^17.11.0",
     "mongoose": "^8.0.1",
     "nodemon": "^3.0.1",
     "prettier": "^3.1.0",
