--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-NODE_ENV=development
+NODE_ENV=poroduction
 PORT=1234
 DATABASE_URL=mongodb+srv://advance-crud:khan1980@cluster0.ahdrbbu.mongodb.net/advance-crud?retryWrites=true&w=majority
