--- a/vercel.json
+++ b/vercel.json
@@ -11,5 +11,8 @@
         "src": "/(.*)",
         "dest": "dist/server.js"
       }
-    ]
+    ],
+    "projectSettings": {
+      "framework": "node"
+    }
   }
