--- a/vercel.json
+++ b/vercel.json
@@ -1,18 +1,23 @@
 {
-    "version": 2,
-    "builds": [
-      {
-        "src": "dist/server.js",
-        "use": "@vercel/node"
-      }
-    ],
-    "routes": [
-      {
-        "src": "/(.*)",
-        "dest": "dist/server.js"
-      }
-    ],
-    "projectSettings": {
-      "framework": "node"
+  "version": 2,
+  "builds": [
+    {
+      "src": "dist/server.js",
+      "use": "@vercel/node"
     }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "dist/server.js"
+    }
+  ],
+  "projectSettings": {
+    "buildCommand": null,
+    "devCommand": null,
+    "framework": "node",
+    "commandForIgnoringBuildStep": "",
+    "installCommand": null,
+    "outputDirectory": null
   }
+}
